--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react",
+  "name": "xplore_blank",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,18 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@studio-freight/react-lenis": "0.0.11",
-    "@studio-freight/tempus": "0.0.36",
     "@studio-lumio/hooks": "^0.1.20",
-    "clsx": "^1.2.1",
     "gsap": "^3.10.4",
     "lodash": "^4.17.21",
     "prefix": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.9.0",
     "sass": "^1.57.1",
-    "splitting": "^1.0.6"
+    "splitting": "^1.0.6",
+    "three": "^0.152.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.185",
