--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@studio-lumio/hooks": "^0.1.20",
+    "auto-bind": "^5.0.1",
     "gsap": "^3.10.4",
     "lodash": "^4.17.21",
     "prefix": "^1.0.0",
